--- a/css/styles.css
+++ b/css/styles.css
@@ -4,15 +4,31 @@ h1{
   padding: 20px;
 }
 
-
+.right{
+  float:right;
+}
 .left{
   float: left;
 }
-h3.sec-header{
+.sec-header{
   color: white;
   font-weight: lighter;
   padding-left: 120px;
-  padding-bottom: 20px;
+  padding-bottom:20px;
+}
+.right-links p a{
+  position: relative;
+  left:80%;
+  padding-left: 20px;
+  padding-bottom: 80px;
+    color:red;
+}
+.red{
+  color:red;
+}
+.second-body{
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .pad{
   padding-left: 60px;
@@ -22,9 +38,9 @@ body{
 }
 
 ul{
-  font-size: 130%;
+  font-family: times;
   color: gray;
-  font-family: serif;
+  font-size: 120%;
 }
 
 .side-bar{
@@ -35,7 +51,11 @@ ul{
 }
 
 .organize{
-  font-size: 150%;
+  font-size: 140%;
   font-weight: bold;
+  font-style: italic;
 
+}
+.regular{
+  font-size: 120%;
 }
