--- a/css/styles.css
+++ b/css/styles.css
@@ -62,3 +62,16 @@ ul{
 .regular{
   font-size: 120%;
 }
+@media screen and (max-width:480px) and (min-width:300px) {
+  body{
+    background-color: black;
+    color: white;
+  }
+
+}
+@media screen and (max-width:1000px) and (min-width:700px) {
+  body{
+    background-color:pink;
+  }
+
+}
